@@ -1,0 +1,25 @@
+#
+#
+#
+
+sub bar
+{
+   throw "hehehe....";
+}
+
+sub foo
+{
+   local('$ex');
+
+   try
+   {
+      bar();
+   }
+   catch $ex
+   {
+      println("$ex");
+      printAll(getStackTrace());
+   }
+}
+
+foo();
